--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="./photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>KANIMOZHI E</h1>
-            <p>ASSISTANT PROFESSOR </p>
+            <h1>sneha</h1>
+            <p>student </p>
         </div>
     </header>
 
