--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./Photo.jpj.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>sneha</h1>
             <p>student </p>
         </div>
