--- a/sneha.html
+++ b/sneha.html
@@ -170,7 +170,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 KANIMOZHI E</p>
+        <p>&copy; 2025 SNEHA C</p>
     </footer>
 
     <script>
